--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,9 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="theme-color" content="#3390ec" />
+    <meta name="format-detection" content="telephone=no" />
     <title>Telegram Birthday Calendar</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </head>
